2025-07-12: did some minor additions - got rid of the hard block on MapCanvas->paintComponent. used a 5 count approach             instead. This should never happen anyways, but as it appears to happen sometimes, well.